# protein-stability

./: .gitattributes  .gitignore  LICENSE  README.md
assets/pucci-db/: Pucci2016-r3.csv  README.md  selectpuccidata.ipynb
avinery-replicate/isingmodel/: compressstate_ising.py  plot_ising_results.py
benchmarking/: test_analysis.py
benchmarking/common/: test_utils.py
benchmarking/graphset/: README.md  analyze_pairings.py  gen_all_imutant.py
benchmarking/imutant/: I-Mutant3D_25666.521723598337  I-Mutant3D_25670.894317676802  I-Mutant3D_25674.0955783621043  I-Mutant3D_25954.581147500415  prob_analytics.ipynb  results-standard.pkl  results.pkl  test_analysis.py  test_imutant.py  test_utils.py
compressor/analysis/: LZAnalysis.py  LZTypes.py  analysistoolsmain.py  readDFProto.py  readLZProto.py  run_proto_validation.py
compressor/analysis-jl/: DEFLATEImpl.jl  filenameparams.jl  lztypes.jl  mod.jl  read_protos.jl
compressor/analysis-tools/: DEFLATEImpl.py  LZAnalysis.py  LZTypes.py  conversion.jl  deflateinfo_pb2.py  filenameparams.py  gen_pyproto.sh  genplot.jl  genplot.sh  interactive.jl  jitfnames.jl  jitterparam.jl  load_data.jl  readLZProto.py  run_proto_validation.py  test_lz_decode.jl
compressor/rustcompressor/: Cargo.toml  README.md  build.rs
compressor/rustcompressor/src/: lib.rs
compressor/rustcompressor/src/deflate/: codepoints.rs  decoder.rs  deflate_header.rs  encoder.rs  mod.rs
compressor/rustcompressor/src/deflate/default_data/: default_huffcode.rs  mod.rs
compressor/rustcompressor/src/deflate/lz77/: decoder.rs  encoder.rs  mod.rs  symstream.rs
compressor/rustcompressor/src/deflate/lz77/proto/: lz77info.proto  mod.rs
compressor/rustcompressor/src/deflate/proto/: deflateinfo.proto  mod.rs
compressor/rustcompressor/src/gzip/: mod.rs  reader.rs  writer.rs
compressor/rustcompressor/src/huff_tree/: mod.rs
compressor/rustcompressor/src/proto/: deflateinfo.pb.cc  deflateinfo.pb.h  deflateinfo.proto
compressor/rustcompressor/test/: random2.txt  test.txt
entropy-measure/: thoughtlog.md
fep-gen/: automutate.tcl  mutate_protein.sh  patchdim.py
old-experiments/: fdrcalc.py
prim-network/: animate-cut-vpy.py  animate-cut.py  main.cpp  network-test.py  plotCpp.py  sig-seeds.txt
protein-tools/ideal-chain/cpp-mcmc/: CMakeLists.txt  COMPILING.md  conanfile.txt  main.cpp  mcmc-lib.jl  mcmc.jl  mcrun.cpp  mcrun.h  mcsimtypes.cpp  read_sim_file.jl  xoroshiro128plus.h
protein-tools/ideal-chain/cpp-mcmc/julia/: analysis.jl  angspring.jl  eecons.jl  mcmc-lib.jl  volcons.jl
protein-tools/ideal-chain/cpp-mcmc/julia/simviz/: viz_angspring.jl  viz_eecons.jl  viz_volcons.jl
protherm-parse/: ParseProtherm.hs
rustcompressor/: Cargo.toml  rustfmt.toml
rustcompressor/src/: lib.rs  main.rs
rustcompressor/src/deflate/: codepoints.rs  decoder.rs  deflate_header.rs  display.rs  encoder.rs  mod.rs
rustcompressor/src/deflate/default_data/: default_codepoints.rs  default_hufftree.rs  default_read_hufftree.rs  mod.rs
rustcompressor/src/gzip/: common.rs  mod.rs  reader.rs  writer.rs
rustcompressor/src/gzip/reader/: mod.rs
rustcompressor/src/gzip/writer/: mod.rs
rustcompressor/src/huff_tree/: legacy_hufftree.rs  mod.rs
rustcompressor/src/sliding_window/: mod.rs
rustcompressor/test/: quicktest-deflate.sh  random1.txt
(+339 files in other folders)
