[package]
name = "compressor"
version = "0.1.0"
authors = ["Kevin Song <chips@ksong.dev>"]
edition = "2018"

[dependencies]
bit-vec = "0.6.2"
bitstream-io = "0.9.0"
bitflags = "1.2.1"
crc32fast = "1.2.0"
thiserror = "1.0.20"
num_enum = "0.5.1"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"