[package]
name = "compressor"
version = "0.1.0"
authors = ["Kevin Song <chips@ksong.dev>"]
edition = "2018"

[dependencies]
bit-vec = "0.6.2"
bitstream-io = "1.0.0"
bitflags = "1.2.1"
crc32fast = "1.2.0"
thiserror = "1.0.20"
num_enum = "0.5.1"
ansi_term = "0.12.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
once_cell = "1.5.2"
prost = "0.7"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.2"