[package]
name = "compressor"
version = "0.2.0"
authors = ["Kevin Song <chips@ksong.dev>"]
edition = "2018"
license = "MIT"

[dependencies]
bit-vec = "0.6.2"
bitstream-io = "1.0.0"
bitflags = "1.2.1"
crc32fast = "1.2.0"
thiserror = "1.0.20"
num_enum = "0.5.1"
ansi_term = "0.12.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
once_cell = "1.5.2"
bytes = "1.0.1"
prost = "0.7"
static_assertions = "1.1.0"
num="0.4.0"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.2"

[build-dependencies]
prost-build = { version = "0.7" }
