[package]
name = "compressor"
version = "0.2.0"
authors = ["Kevin Song <chips@ksong.dev>"]
edition = "2018"
license = "MIT"

[dependencies]
bit-vec = "0.6.3"
bitstream-io = "1.6.0"
bitflags = "1.3.2"
crc32fast = "1.3.2"
thiserror = "1.0.38"
num_enum = "0.5.9"
ansi_term = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
once_cell = "1.17.0"
bytes = "1.3.0"
prost = "0.10.4"
static_assertions = "1.1.0"
num="0.4.0"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"

[build-dependencies]
prost-build = { version = "0.10.4" }
